[gd_scene load_steps=13 format=3 uid="uid://dr16ytx58daa1"]

[ext_resource type="Script" uid="uid://3sasinrk8fc6" path="res://multiplayer_scene.gd" id="1_l5bl4"]
[ext_resource type="PackedScene" uid="uid://bje1it34lkko4" path="res://src/scenes/camera_2d.tscn" id="3_1y8sy"]
[ext_resource type="Texture2D" uid="uid://deok42gxy40yl" path="res://assets/sprites/world/backgrounds/back.png" id="4_cp7oh"]
[ext_resource type="Texture2D" uid="uid://dkavotkqcu7jx" path="res://assets/sprites/world/backgrounds/middle.png" id="5_hfjpm"]
[ext_resource type="Script" uid="uid://dvb3whtgxjn0m" path="res://src/scenes/powerups/card_container.gd" id="6_tx3e7"]
[ext_resource type="Script" uid="uid://baoih2g6gs12p" path="res://src/ui/components/progress_bar.gd" id="7_3s4xp"]
[ext_resource type="Texture2D" uid="uid://riso1kxfjte0" path="res://assets/sprites/world/tile-types.png" id="8_hhdsi"]
[ext_resource type="Texture2D" uid="uid://baxhjmno0fwf4" path="res://assets/sprites/player/DragonSprites.png" id="9_b4j7g"]
[ext_resource type="Script" uid="uid://gcx3s3vsmgqd" path="res://src/ui/end_screen.gd" id="10_lknwm"]
[ext_resource type="AudioStream" uid="uid://c1fov605bxdlk" path="res://assets/music/JDSherbert - Minigame Music Pack - Streetlights.ogg" id="11_gioxo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("8_hhdsi")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("9_b4j7g")
region = Rect2(4, 1, 16, 13)

[node name="MultiplayerScene" type="Node" node_paths=PackedStringArray("level", "player_node", "camera_p1", "camera_p2", "viewport_p1", "viewport_p2")]
script = ExtResource("1_l5bl4")
level = NodePath("")
player_node = NodePath("")
camera_p1 = NodePath("")
camera_p2 = NodePath("VBoxContainer/SubViewportContainer2/SubViewport/Camera2D")
viewport_p1 = NodePath("VBoxContainer/SubViewportContainer/SubViewport")
viewport_p2 = NodePath("VBoxContainer/SubViewportContainer2/SubViewport")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 322)
render_target_update_mode = 4

[node name="ParallaxBackground" type="ParallaxBackground" parent="VBoxContainer/SubViewportContainer/SubViewport"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground/ParallaxLayer"]
position = Vector2(192, 56)
texture = ExtResource("4_cp7oh")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 56)
texture = ExtResource("4_cp7oh")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0.05, 0.1)
motion_mirroring = Vector2(352, 0)

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(88, 192)
texture = ExtResource("5_hfjpm")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(264, 192)
texture = ExtResource("5_hfjpm")

[node name="Sprite2D3" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(792, 192)
texture = ExtResource("5_hfjpm")

[node name="Sprite2D4" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(968, 192)
texture = ExtResource("5_hfjpm")

[node name="SubViewportContainer2" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(1152, 322)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Camera2D" parent="VBoxContainer/SubViewportContainer2/SubViewport" instance=ExtResource("3_1y8sy")]
offset = Vector2(0, -16)

[node name="ParallaxBackground" type="ParallaxBackground" parent="VBoxContainer/SubViewportContainer2/SubViewport"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground/ParallaxLayer"]
position = Vector2(192, 56)
texture = ExtResource("4_cp7oh")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 56)
texture = ExtResource("4_cp7oh")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground"]
texture_filter = 1
motion_scale = Vector2(0.05, 0.1)
motion_mirroring = Vector2(352, 0)

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(88, 192)
texture = ExtResource("5_hfjpm")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(264, 192)
texture = ExtResource("5_hfjpm")

[node name="Sprite2D3" type="Sprite2D" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(792, 192)
texture = ExtResource("5_hfjpm")

[node name="Sprite2D4" type="Sprite2D" parent="VBoxContainer/SubViewportContainer2/SubViewport/ParallaxBackground/ParallaxLayer2"]
position = Vector2(968, 192)
texture = ExtResource("5_hfjpm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="MarginContainer" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 42.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 100
script = ExtResource("7_3s4xp")

[node name="Texture" type="Panel" parent="CanvasLayer/ProgressBar"]
custom_minimum_size = Vector2(10, 32)
layout_mode = 2

[node name="Crown" type="Sprite2D" parent="CanvasLayer/ProgressBar"]
position = Vector2(1051, 26)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_kek77")

[node name="IconContainer" type="Node" parent="CanvasLayer/ProgressBar"]

[node name="Player1" type="Sprite2D" parent="CanvasLayer/ProgressBar/IconContainer"]
position = Vector2(101, 26)
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_5vw27")

[node name="EndScreen" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(500, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("10_lknwm")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EndScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -42.5
offset_right = 72.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "MISSION COMPLETE!"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/EndScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 49
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Total Time: "

[node name="TimeLabel" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Resets: "

[node name="ResetsLabel" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Resets"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Crowns dropped: "

[node name="CrownDroppedLabel" type="Label" parent="CanvasLayer/EndScreen/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Crown"
horizontal_alignment = 2

[node name="RetryButton" type="Button" parent="CanvasLayer/EndScreen/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Retry"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardContainer" type="Panel" parent="CanvasLayer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("6_tx3e7")

[node name="CardContainer2" type="Panel" parent="CanvasLayer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("6_tx3e7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_gioxo")
volume_db = -15.0
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="CanvasLayer/EndScreen/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
